--- a/views/accueil.html
+++ b/views/accueil.html
@@ -40,11 +40,11 @@
       <div class="container">
          <div class="row">
             <div class="col-md-6">
-               <h3>Bla bla bla </h3>
+               <h3>Bla bla bla bla </h3>
                <p>....................................................</p>
             </div>
             <div class="col-md-6">
-               <h3>Bla bla bla </h3>
+               <h3>Bla bla bla bla</h3>
                <p>....................................................</p>
             </div>
          </div>
